Update method of converting feat lyr to sdf
...because I realized while reading API docs that empty string in query method only gets 1000 features. Ugh. Also realized that GIT must obviously (obviously) tracks files via unique IDs, so when I've replaced a file and renamed to same name as deleted file, its history starts and old file history stops. Oops. Will try to avoid that in the future.

--- a/Disaster_Declarations_Dashboard_v2.ipynb
+++ b/Disaster_Declarations_Dashboard_v2.ipynb
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "7dc57611",
    "metadata": {},
    "outputs": [],
@@ -52,6 +52,7 @@
     "import requests\n",
     "\n",
     "from arcgis.gis import GIS\n",
+    "from arcgis.features import GeoAccessor, GeoSeriesAccessor # for converting to sdf\n",
     "from arcgis.features import manage_data # For dissolving declaration boundaries\n",
     "\n",
     "import numpy as np\n",
@@ -73,18 +74,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "4041c933",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Logged in as AlderMaps successfully.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "gis = GIS(\"home\")\n",
     "me = gis.properties.user.username\n",
@@ -121,23 +114,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "3ee2370f",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Geometry and dashboard feature layers loaded successfully.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "dd_id = \"d37c3c2a6f1c4586baad82828bfc3c59\"\n",
     "dd_item = gis.content.get(dd_id)\n",
     "geometries_layer = dd_item.layers[1]\n",
-    "geometries_sdf = geometries_layer.query().sdf\n",
+    "geometries_sdf = pd.DataFrame.spatial.from_layer(geometries_layer)\n",
     "\n",
     "# Production layer; commented out while testing\n",
     "#dashboard_layer = dd_item.layers[0]\n",
@@ -146,7 +131,7 @@
     "test_id = \"edb716da51bc4f7882d13d425ad08fd2\"\n",
     "test_item = gis.content.get(test_id)\n",
     "dashboard_layer = test_item.layers[0]\n",
-    "dashboard_sdf = dashboard_layer.query().sdf\n",
+    "dashboard_sdf = pd.DataFrame.spatial.from_layer(dashboard_layer)\n",
     "\n",
     "print(\"Geometry and dashboard feature layers loaded successfully.\")"
    ]
@@ -169,18 +154,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "b9d0bef7",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Most recent 1000 Disaster Declarations Summaries loaded successfully.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "api_url = r\"https://www.fema.gov/api/open/v2/DisasterDeclarationsSummaries?$filter=fyDeclared ge 2013&$orderby=declarationDate desc\"\n",
     "\n",
@@ -211,18 +188,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "e31bd54e",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Entity field addition completed successfully.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "entity_conditions = [\n",
     "    summaries_df[\"fipsCountyCode\"] != \"000\",\n",
@@ -249,22 +218,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "00f171ed",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Found no new Declarations to add! We're done here.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "multi_key = [\"femaDeclarationString\", \"Entity\"]\n",
     "\n",
+    "# Merge the dataframes on the multikey fields\n",
     "pre_adds = summaries_df.merge(dashboard_sdf[multi_key], on=multi_key, how=\"left\", indicator=True)\n",
+    "\n",
+    "# Filter the results to those rows only occurring in the summaries dataset, not in the dashboard\n",
     "adds_df = pre_adds[pre_adds[\"_merge\"] == \"left_only\"].drop(columns=[\"_merge\"])\n",
     "\n",
     "if adds_df.empty:\n",
@@ -303,7 +267,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "433e4daa",
    "metadata": {},
    "outputs": [],
@@ -332,7 +296,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "id": "46caf1e7",
    "metadata": {},
    "outputs": [],
@@ -361,7 +325,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "id": "4cea13b1",
    "metadata": {},
    "outputs": [],
@@ -403,7 +367,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "id": "b1c85969",
    "metadata": {},
    "outputs": [],
@@ -414,8 +378,10 @@
     "\n",
     "    def get_geometries(entity, field, df_list):\n",
     "\n",
+    "        # Filter the adds_df to the entity (county, tribal or state) argument\n",
     "        entity_adds_df = adds_df[adds_df[\"Entity\"] == entity]\n",
     "\n",
+    "        # If there are rows in the adds_df for this particular entity:\n",
     "        if not entity_adds_df.empty:\n",
     "            # The suffixes argument must be included, with one element of the tuple parameter being an empty string.\n",
     "            # Otherwise the dissolve will fail because both \"Entity\" fields are renamed to the defaults of \"Entity_x\" and \"Entity_y\".\n",
@@ -446,15 +412,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "id": "1306bd1f",
    "metadata": {},
    "outputs": [],
    "source": [
     "if adds:\n",
     "\n",
+    "    # Convert the spatial dataframe to a feature collection,\n",
+    "    # the required input type for dissolve_boundaries.\n",
     "    adds_feature_collection = adds_geometries.spatial.to_feature_collection()\n",
     "\n",
+    "    # Assemble field names to use in dissolve_boundaries from destination layer minus shape/id fields.\n",
     "    remove_fields = [\"OBJECTID\", \"Shape__Area\", \"Shape__Length\", \"SHAPE\"]\n",
     "    dissolve_fields = [f[\"name\"] for f in dashboard_layer.properties.fields if not f[\"name\"] in remove_fields]\n",
     "\n",
@@ -475,16 +444,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "id": "e0c16524",
    "metadata": {},
    "outputs": [],
    "source": [
     "if adds:\n",
-    "    \n",
+    "\n",
+    "    # Convert feature collection to list of features,\n",
+    "    # which is the required parameter type for edit_features method\n",
     "    adds_features = adds_dissolved.query().features\n",
     "    message = dashboard_layer.edit_features(adds_features)\n",
-    "\n",
     "    added_list = message[\"addResults\"]\n",
     "\n",
     "    print(\"The following features were added successfully:\")\n",
@@ -494,25 +464,16 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6ef9afed",
+   "id": "9ee7d3f1",
    "metadata": {},
    "source": [
-    "### Get webhook URL"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "c8dda730",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "url_file = \"/arcgis/home/url.txt\"\n",
+    "## Part III: Send email message using webhook\n",
     "\n",
-    "with open(url_file, \"r\") as file:\n",
-    "    webhook_url = file.readline().strip()\n",
+    "Ideally I would accomplish this section simply using the send_notification method on the user in the py API; however I receive permissions errors. Someone with Esri confirmed my code to accomplish this worked for them; possible reason mine fails (only feasible reason? Only different variable?) is that my org is Personal Use License. 🤷 Webhook works fine.\n",
     "\n",
-    "print(\"Webhook endpoint URL retrieved successfully.\")"
+    "Webhook (url removed for GitHub) was created using [Make (formerly Integromat)](https://www.make.com/).\n",
+    "\n",
+    "<hr>"
    ]
   },
   {
@@ -525,7 +486,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "id": "b9744e86",
    "metadata": {},
    "outputs": [],
@@ -546,31 +507,21 @@
    "id": "b098396e",
    "metadata": {},
    "source": [
-    "### Configure webhook json and send to webhook endpoint URL\n",
-    "Obviously this doesn't send anything if the script fails at any point before the post. May put in the extra work to ensure it sends an email in all cases, but for now this is good enough."
+    "### Configure json and send to webhook endpoint URL\n",
+    "Obviously this doesn't send anything if the script fails at any point before the post. May put in the extra work to ensure it sends an email in all cases, but for now this is good enough (after all, no email means the script failed just as surely as an email saying it failed).\n",
+    "\n",
+    "webhook_url in Notebook in AGOL with scheduled task includes webhook endpoint url; url removed in GitHub repo notebook for security."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "id": "945fed49",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Accepted\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "payload = {\n",
-    "    \"subject\": subject,\n",
-    "    \"body\": body,\n",
-    "    \"attached\": attached\n",
-    "}\n",
-    "\n",
+    "payload = {\"subject\": subject, \"body\": body, \"attached\": attached}\n",
+    "webhook_url = \"https://hook.us2.make.com/jaajh60ry86rnbgoct2pt6tzpp4rjp2w\"\n",
     "response = requests.post(webhook_url, json=payload)\n",
     "\n",
     "print(response.text)"
