--- a/Disaster_Declarations_Dashboard_v2.ipynb
+++ b/Disaster_Declarations_Dashboard_v2.ipynb
@@ -521,7 +521,7 @@
    "outputs": [],
    "source": [
     "payload = {\"subject\": subject, \"body\": body, \"attached\": attached}\n",
-    "webhook_url = \"https://hook.us2.make.com/jaajh60ry86rnbgoct2pt6tzpp4rjp2w\"\n",
+    "webhook_url = [\"insert webhook url\"]\n",
     "response = requests.post(webhook_url, json=payload)\n",
     "\n",
     "print(response.text)"
