DisDecDash: switch from testing to production
Modify "About" and "Data" sections of Disaster Declarations Dashboard, removing "script under construction" and related text, switching to default information about update cadence etc. Also include "misc" file with HTML/CSS I may want to use later.

--- a/Disaster_Declarations_Dashboard_v2.ipynb
+++ b/Disaster_Declarations_Dashboard_v2.ipynb
@@ -121,16 +121,17 @@
    "source": [
     "dd_id = \"d37c3c2a6f1c4586baad82828bfc3c59\"\n",
     "dd_item = gis.content.get(dd_id)\n",
+    "\n",
     "geometries_layer = dd_item.layers[1]\n",
     "geometries_sdf = pd.DataFrame.spatial.from_layer(geometries_layer)\n",
     "\n",
-    "# Production layer; commented out while testing\n",
-    "#dashboard_layer = dd_item.layers[0]\n",
-    "\n",
     "# Test layer; replace with above on conversion to production\n",
-    "test_id = \"edb716da51bc4f7882d13d425ad08fd2\"\n",
-    "test_item = gis.content.get(test_id)\n",
-    "dashboard_layer = test_item.layers[0]\n",
+    "#test_id = \"edb716da51bc4f7882d13d425ad08fd2\"\n",
+    "#test_item = gis.content.get(test_id)\n",
+    "#dashboard_layer = test_item.layers[0]\n",
+    "\n",
+    "# Production layer; commented out while testing\n",
+    "dashboard_layer = dd_item.layers[0]\n",
     "dashboard_sdf = pd.DataFrame.spatial.from_layer(dashboard_layer)\n",
     "\n",
     "print(\"Geometry and dashboard feature layers loaded successfully.\")"
