New script (ipynb): Content Management
Created new draft of script for AGOL content management, including inventorying users' last logins and item dependencies, status, age etc.

--- a/Disaster_Declarations_Dashboard_v2.ipynb
+++ b/Disaster_Declarations_Dashboard_v2.ipynb
@@ -68,8 +68,7 @@
    "id": "bf825fb0",
    "metadata": {},
    "source": [
-    "### Connect to ArcGIS\n",
-    "\"me\" and \"my_email\" variables will be used to send an email at script completion"
+    "### Connect to ArcGIS"
    ]
   },
   {
