AGOL Inventory end-of-day

--- a/AGOL_Inventory_Tag.ipynb
+++ b/AGOL_Inventory_Tag.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 10,
    "id": "1d321d1e",
    "metadata": {},
    "outputs": [],
@@ -22,8 +22,23 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e133e173",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cm_id = \"03209b91e33f4c588007319d18cd6e70\"\n",
+    "cm_item = gis.content.get(cm_id)\n",
+    "\n",
+    "users_table = cm_item.tables[0]\n",
+    "inventory_table = cm_item.tables[1]\n",
+    "dependencies_table = cm_item.tables[2]"
+   ]
+  },
+  {
    "cell_type": "markdown",
-   "id": "c9c1a10d",
+   "id": "85d037c7",
    "metadata": {},
    "source": [
     "### WTF is the user.lastLogin property not just a datetime object???\n",
@@ -32,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 11,
    "id": "564b5a43",
    "metadata": {},
    "outputs": [],
@@ -50,27 +65,24 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "c2336ec5",
-   "metadata": {},
-   "source": [
-    "### Get the info for my tables in AGOL\n",
-    "\n"
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": 4,
-   "id": "2be8b68e",
+   "execution_count": 12,
+   "id": "e52deafe",
    "metadata": {},
    "outputs": [],
    "source": [
-    "cm_id = \"03209b91e33f4c588007319d18cd6e70\"\n",
-    "cm_item = gis.content.get(cm_id)\n",
+    "# Get total storage of user's content\n",
+    "def get_total_storage(user):\n",
     "\n",
-    "users_table = cm_item.tables[0]\n",
-    "inventory_table = cm_item.tables[1]\n",
-    "dependencies_table = cm_item.tables[2]"
+    "    total_bytes = 0\n",
+    "\n",
+    "    for folder in user.folders:\n",
+    "        for item in user.items(folder=folder):\n",
+    "            total_bytes += item.size\n",
+    "\n",
+    "    total_mb = round(total_bytes / (1024*1024))\n",
+    "\n",
+    "    return total_mb"
    ]
   },
   {
@@ -83,7 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": null,
    "id": "21d89eeb",
    "metadata": {},
    "outputs": [
@@ -92,7 +104,7 @@
      "output_type": "stream",
      "text": [
       "Number of users to add to table: 1\n",
-      "[{'attributes': {'username': 'AlderMaps', 'user_email': 'misti@aldermaps.com', 'last_login': 1758311377000, 'days_since_last_login': 0}}]\n"
+      "[{'attributes': {'username': 'AlderMaps', 'user_email': 'misti@aldermaps.com', 'last_login': 1758317242000, 'days_since_last_login': 0, 'total_storage': 844}}]\n"
      ]
     }
    ],
@@ -115,6 +127,7 @@
     "    user_dict[\"user_email\"] = user.email\n",
     "    user_dict[\"last_login\"] = user.lastLogin\n",
     "    user_dict[\"days_since_last_login\"] = get_time_delta(user.lastLogin)\n",
+    "    user_dict[\"total_storage\"] = get_total_storage(user)\n",
     "\n",
     "    # Add inner dict to outer dict w/key \"attributes\"\n",
     "    update_dict[\"attributes\"] = user_dict\n",
@@ -122,123 +135,33 @@
     "    # Append the user dict to the users list\n",
     "    users_list.append(update_dict)\n",
     "\n",
-    "print(f\"Number of users to add to table: {len(users_list)}\")\n",
-    "\n",
-    "print(users_list)"
+    "print(f\"Number of users to add to table: {len(users_list)}\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 19,
    "id": "80d1fac1",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[{'attributes': {'username': 'AlderMaps',\n",
-       "   'user_email': 'misti@aldermaps.com',\n",
-       "   'last_login': 1758311377000,\n",
-       "   'days_since_last_login': 0}},\n",
-       " {'attributes': {'username': 'Matt',\n",
-       "   'user_email': 'matt@aldermaps.com',\n",
-       "   'last_login': 1740205197408,\n",
-       "   'days_since_last_login': 209}},\n",
-       " {'attributes': {'username': 'Eric',\n",
-       "   'user_email': 'eric@aldermaps.com',\n",
-       "   'last_login': 1726304097308,\n",
-       "   'days_since_last_login': 370}},\n",
-       " {'attributes': {'username': 'Alanda',\n",
-       "   'user_email': 'alanda@aldermaps.com',\n",
-       "   'last_login': 1757318197908,\n",
-       "   'days_since_last_login': 11}},\n",
-       " {'attributes': {'username': 'Christine',\n",
-       "   'user_email': 'christine@aldermaps.com',\n",
-       "   'last_login': 1748305167908,\n",
-       "   'days_since_last_login': 115}},\n",
-       " {'attributes': {'username': 'Khaled',\n",
-       "   'user_email': 'khaled@aldermaps.com',\n",
-       "   'last_login': 1756218197908,\n",
-       "   'days_since_last_login': 24}},\n",
-       " {'attributes': {'username': 'Xiaoyi',\n",
-       "   'user_email': 'xiaoyi@aldermaps.com',\n",
-       "   'last_login': 1755218197908,\n",
-       "   'days_since_last_login': 35}}]"
-      ]
-     },
-     "execution_count": 39,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Fake users data for use in creating Dashboard\n",
     "# Because a (Personal Use License) org with a single user makes for a lame bar chart\n",
     "\n",
     "ts = [1740205197408, 1726304097308, 1757318197908, 1748305167908, 1756218197908, 1755218197908]\n",
     "\n",
-    "def get_fake_users():\n",
-    "\n",
-    "    users_list = [\n",
-    "        {\n",
-    "            \"attributes\": {\n",
-    "            \"username\": \"Matt\", \n",
-    "            \"user_email\": \"matt@aldermaps.com\",\n",
-    "            \"last_login\": ts[0],\n",
-    "            \"days_since_last_login\": get_time_delta(ts[0])\n",
-    "            }\n",
-    "        },\n",
-    "        {\n",
-    "            \"attributes\": {\n",
-    "            \"username\": \"Eric\", \n",
-    "            \"user_email\": \"eric@aldermaps.com\", \n",
-    "            \"last_login\": ts[1],\n",
-    "            \"days_since_last_login\": get_time_delta(ts[1])\n",
-    "            }\n",
-    "        },\n",
-    "        {\n",
-    "            \"attributes\": {\n",
-    "            \"username\": \"Alanda\", \n",
-    "            \"user_email\": \"alanda@aldermaps.com\", \n",
-    "            \"last_login\": ts[2],\n",
-    "            \"days_since_last_login\": get_time_delta(ts[2])\n",
-    "            }\n",
-    "        },\n",
-    "        {\n",
-    "            \"attributes\": {\n",
-    "            \"username\": \"Christine\", \n",
-    "            \"user_email\": \"christine@aldermaps.com\", \n",
-    "            \"last_login\": ts[3],\n",
-    "            \"days_since_last_login\": get_time_delta(ts[3])\n",
-    "            }\n",
-    "        },\n",
-    "        {\n",
-    "            \"attributes\": {\n",
-    "            \"username\": \"Khaled\", \n",
-    "            \"user_email\": \"khaled@aldermaps.com\", \n",
-    "            \"last_login\": ts[4],\n",
-    "            \"days_since_last_login\": get_time_delta(ts[4])\n",
-    "            }\n",
-    "        },\n",
-    "        {\n",
-    "            \"attributes\": {\n",
-    "            \"username\": \"Xiaoyi\", \n",
-    "            \"user_email\": \"xiaoyi@aldermaps.com\", \n",
-    "            \"last_login\": ts[5],\n",
-    "            \"days_since_last_login\": get_time_delta(ts[5])\n",
-    "            }\n",
-    "        }\n",
-    "    ]\n",
-    "\n",
-    "    return users_list\n",
-    "\n",
-    "fake_users = get_fake_users()\n",
+    "fake_users = [\n",
+    "    {\"attributes\": {\"username\": \"Matt\", \"user_email\": \"matt@aldermaps.com\", \"last_login\": ts[0], \"days_since_last_login\": get_time_delta(ts[0]), \"total_storage\": 443}},\n",
+    "    {\"attributes\": {\"username\": \"Eric\", \"user_email\": \"eric@aldermaps.com\", \"last_login\": ts[1], \"days_since_last_login\": get_time_delta(ts[1]), \"total_storage\": 29}},\n",
+    "    {\"attributes\": {\"username\": \"Alanda\", \"user_email\": \"alanda@aldermaps.com\", \"last_login\": ts[2], \"days_since_last_login\": get_time_delta(ts[2]), \"total_storage\": 92}},\n",
+    "    {\"attributes\": {\"username\": \"Christine\", \"user_email\": \"christine@aldermaps.com\", \"last_login\": ts[3], \"days_since_last_login\": get_time_delta(ts[3]), \"total_storage\": 8}},\n",
+    "    {\"attributes\": {\"username\": \"Khaled\", \"user_email\": \"khaled@aldermaps.com\", \"last_login\": ts[4], \"days_since_last_login\": get_time_delta(ts[4]), \"total_storage\": 133}},\n",
+    "    {\"attributes\": {\"username\": \"Xiaoyi\", \"user_email\": \"xiaoyi@aldermaps.com\", \"last_login\": ts[5], \"days_since_last_login\": get_time_delta(ts[5]), \"total_storage\": 3}}\n",
+    "]\n",
     "\n",
     "# Tack my list of fake user dicts onto my own dict\n",
     "# To disable addition of fake users, simply comment out the line below\n",
-    "users_list = users_list + fake_users\n",
-    "\n",
-    "users_list"
+    "users_list = users_list + fake_users"
    ]
   },
   {
@@ -251,7 +174,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 21,
    "id": "c4be18a3",
    "metadata": {},
    "outputs": [],
@@ -262,14 +185,6 @@
     "\n",
     "# Add users to table\n",
     "users_update = users_table.edit_features(adds=users_list)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "fa234806",
-   "metadata": {},
-   "source": [
-    "### Assemble item info to be added to Inventory table"
    ]
   }
  ],
