AGOL Monitoring COB 9/22
...it actually seems to be working as intended. 🤣

--- a/AGOL_Monitoring_Dependencies.ipynb
+++ b/AGOL_Monitoring_Dependencies.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 15,
    "id": "1d321d1e",
    "metadata": {},
    "outputs": [],
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 16,
    "id": "e133e173",
    "metadata": {},
    "outputs": [],
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 17,
    "id": "cdf5b1bd",
    "metadata": {},
    "outputs": [],
@@ -56,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 18,
    "id": "2926537a",
    "metadata": {},
    "outputs": [],
@@ -75,23 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
-   "id": "02ee23b1",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Okay now for the fun part, figure out whether items have dependencies\n",
-    "def get_dependencies_bool(item):\n",
-    "\n",
-    "    if item.get_dependencies():\n",
-    "        return \"Yes\"\n",
-    "    else:\n",
-    "        return \"No\""
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 19,
    "id": "9b38f270",
    "metadata": {},
    "outputs": [
@@ -99,7 +83,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Number of items to add to table: 222\n"
+      "Number of items to add to table: 223\n",
+      "Number of items to add to table: 402\n"
      ]
     }
    ],
@@ -107,15 +92,19 @@
     "# Get all users in the org\n",
     "all_items = gis.content.search(query=\"*\", max_items=10000)\n",
     "\n",
-    "# initialize empty dict to hold users info for AGOL table\n",
+    "# Initialize empty dict to hold items and dependencies rows for AGOL table\n",
     "items_list = []\n",
+    "dependencies_list = []\n",
     "\n",
     "# Loop through users; populate users dictionary\n",
     "for item in all_items:\n",
     "\n",
     "    # Initialize two dicts I need for each row to be added to users table\n",
-    "    update_dict = {}\n",
     "    items_dict = {}\n",
+    "    update_items_dict = {}\n",
+    "    \n",
+    "    # Get the dependencies for the item (list of items)\n",
+    "    dependencies = item.get_dependencies(deep=True)\n",
     "\n",
     "    # Add k/v pairs to the inner dict\n",
     "    items_dict[\"item_id\"] = item.id\n",
@@ -135,15 +124,39 @@
     "\n",
     "    items_dict[\"date_created\"] = item.created\n",
     "    items_dict[\"date_modified\"] = item.modified\n",
-    "    items_dict[\"has_dependencies\"] = get_dependencies_bool(item)\n",
     "\n",
-    "    # Add inner dict to outer dict w/key \"attributes\"\n",
-    "    update_dict[\"attributes\"] = items_dict\n",
+    "    # BEGIN DEPENDENCIES\n",
+    "    if not dependencies:\n",
+    "        items_dict[\"has_dependencies\"] = \"No\"\n",
+    "        items_dict[\"dependencies_count\"] = 0\n",
     "\n",
-    "    # Append the user dict to the users list\n",
-    "    items_list.append(update_dict)\n",
+    "    else:\n",
+    "        items_dict[\"has_dependencies\"] = \"Yes\"\n",
+    "        items_dict[\"dependencies_count\"] = len(dependencies)\n",
     "\n",
-    "print(f\"Number of items to add to table: {len(items_list)}\")"
+    "        for dependency in dependencies:\n",
+    "\n",
+    "            dependencies_dict = {}\n",
+    "            update_dependencies_dict = {}\n",
+    "\n",
+    "            dependencies_dict[\"origin_id\"] = item.id\n",
+    "            dependencies_dict[\"origin_title\"] = item.title\n",
+    "            dependencies_dict[\"dependent_id\"] = dependency.id\n",
+    "            dependencies_dict[\"dependent_title\"] = dependency.title\n",
+    "            dependencies_dict[\"dependent_type\"] = dependency.type\n",
+    "            dependencies_dict[\"dependent_item_url\"] = f'<a target=\"_blank\" href=\"https://www.maps.arcgis.com/home/item.html?id={dependency.id}\">View Item Page</a>'\n",
+    "            dependencies_dict[\"dependent_url\"] = get_item_url_str(dependency)\n",
+    "\n",
+    "            update_dependencies_dict[\"attributes\"] = dependencies_dict\n",
+    "\n",
+    "            dependencies_list.append(update_dependencies_dict)\n",
+    "\n",
+    "    update_items_dict[\"attributes\"] = items_dict\n",
+    "\n",
+    "    items_list.append(update_items_dict)\n",
+    "\n",
+    "print(f\"Number of items to add to table: {len(items_list)}\")\n",
+    "print(f\"Number of items to add to table: {len(dependencies_list)}\")"
    ]
   },
   {
@@ -156,54 +169,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
-   "id": "cfadbde7",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Number of items to add to table: 222\n"
-     ]
-    }
-   ],
-   "source": [
-    "# List of dependencies (rows) for dependencies table\n",
-    "dependencies_list = []\n",
-    "\n",
-    "# Loop through items\n",
-    "for item in all_items:\n",
-    "\n",
-    "    # Get the dependencies for the item (list of items)\n",
-    "    dependencies = item.get_dependencies()\n",
-    "\n",
-    "    # Ignore what doesn't have dependencies\n",
-    "    if not dependencies:\n",
-    "        continue\n",
-    "\n",
-    "    # Initialize two dicts I need for each row to be added to users table\n",
-    "    update_dict = {}\n",
-    "    dependencies_dict = {}\n",
-    "\n",
-    "    # This is a one-to-many relationship so loop through dependencies\n",
-    "    for dependency in dependencies:\n",
-    "\n",
-    "        dependencies_dict[\"origin_id\"] = item.id\n",
-    "        dependencies_dict[\"dependent_id\"] = dependency.id\n",
-    "\n",
-    "    # Add inner dict to outer dict w/key \"attributes\"\n",
-    "    update_dict[\"attributes\"] = dependencies_dict\n",
-    "\n",
-    "    # Append the user dict to the users list\n",
-    "    dependencies_list.append(update_dict)\n",
-    "\n",
-    "print(f\"Number of items to add to table: {len(items_list)}\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "id": "82549bee",
    "metadata": {},
    "outputs": [],
@@ -219,7 +185,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 21,
    "id": "1692db1b",
    "metadata": {},
    "outputs": [],
