AGOL Monitoring COB (no really this time)
Refactoring etc that my obsessive brain can't leave till tomorrow

--- a/AGOL_Monitoring_Dependencies.ipynb
+++ b/AGOL_Monitoring_Dependencies.ipynb
@@ -40,42 +40,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "id": "cdf5b1bd",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Function to get the status (authoritative, deprecated, none) of items\n",
     "def get_status(status):\n",
-    "\n",
     "    if not status:\n",
     "        return \"None\"\n",
-    "    else:\n",
-    "        return status.lstrip(\"org_\").title()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 18,
-   "id": "2926537a",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Nope I need to do this now; otherwise it's mixing a string and a null and it'll just get ugly\n",
-    "def get_item_url_str(item):\n",
+    "    else: return status.lstrip(\"org_\").title()\n",
+    "\n",
+    "def get_item_url(item):\n",
     "    if item.type in [\"Vector Tile Service\", \"Feature Service\", \"Map Service\", \"Image Service\"]:\n",
     "        return f'<a target=\"_blank\" href=\"{item.url}\">View Service</a>'\n",
     "    elif item.type == \"Web Map\":\n",
     "        return f'<a target=\"_blank\" href=\"https://www.maps.arcgis.com/apps/mapviewer/index.html?webmap={item.id}\">View Map</a>'\n",
     "    elif item.type in [\"Hub Site Application\", \"StoryMap\", \"Web Experience\", \"Web Experience Template\", \"Dashboard\", \"Hub Page\"]:\n",
     "        return f'<a target=\"_blank\" href=\"{item.url}\">View App</a>'\n",
-    "    else:\n",
-    "        return \"Not applicable\""
+    "    else: return \"Not applicable\"\n",
+    "\n",
+    "def get_item_page_url(item_id):\n",
+    "    return f'<a target=\"_blank\" href=\"https://www.maps.arcgis.com/home/item.html?id={item_id}\">View Item Page</a>'"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "id": "9b38f270",
    "metadata": {},
    "outputs": [
@@ -89,43 +79,30 @@
     }
    ],
    "source": [
-    "# Get all users in the org\n",
     "all_items = gis.content.search(query=\"*\", max_items=10000)\n",
     "\n",
-    "# Initialize empty dict to hold items and dependencies rows for AGOL table\n",
     "items_list = []\n",
     "dependencies_list = []\n",
     "\n",
-    "# Loop through users; populate users dictionary\n",
     "for item in all_items:\n",
     "\n",
-    "    # Initialize two dicts I need for each row to be added to users table\n",
     "    items_dict = {}\n",
     "    update_items_dict = {}\n",
     "    \n",
-    "    # Get the dependencies for the item (list of items)\n",
-    "    dependencies = item.get_dependencies(deep=True)\n",
-    "\n",
-    "    # Add k/v pairs to the inner dict\n",
     "    items_dict[\"item_id\"] = item.id\n",
-    "    items_dict[\"item_url\"] = f'<a target=\"_blank\" href=\"https://www.maps.arcgis.com/home/item.html?id={item.id}\">View Item Page</a>'\n",
-    "\n",
-    "    # Could fine-tune this so it returns link text based on the item type...too lazy right now...\n",
-    "    items_dict[\"service_url\"] = get_item_url_str(item)\n",
+    "    items_dict[\"item_url\"] = get_item_page_url(item.id)\n",
+    "    items_dict[\"service_url\"] = get_item_url(item)\n",
     "    items_dict[\"item_type\"] = item.type\n",
     "    items_dict[\"title\"] = item.title\n",
     "    items_dict[\"owner\"] = item.owner\n",
-    "\n",
-    "    # Well the sharing is going to be a little more complex...will have to work with this a bit; \n",
-    "    # shared_with returns a dict, \"groups\" and \"level\" as keys\n",
     "    items_dict[\"sharing\"] = str(item.sharing.sharing_level.value).title()\n",
-    "\n",
     "    items_dict[\"status\"] = get_status(item.content_status)\n",
-    "\n",
     "    items_dict[\"date_created\"] = item.created\n",
     "    items_dict[\"date_modified\"] = item.modified\n",
     "\n",
     "    # BEGIN DEPENDENCIES\n",
+    "    dependencies = item.get_dependencies(deep=True)\n",
+    "\n",
     "    if not dependencies:\n",
     "        items_dict[\"has_dependencies\"] = \"No\"\n",
     "        items_dict[\"dependencies_count\"] = 0\n",
@@ -144,19 +121,17 @@
     "            dependencies_dict[\"dependent_id\"] = dependency.id\n",
     "            dependencies_dict[\"dependent_title\"] = dependency.title\n",
     "            dependencies_dict[\"dependent_type\"] = dependency.type\n",
-    "            dependencies_dict[\"dependent_item_url\"] = f'<a target=\"_blank\" href=\"https://www.maps.arcgis.com/home/item.html?id={dependency.id}\">View Item Page</a>'\n",
-    "            dependencies_dict[\"dependent_url\"] = get_item_url_str(dependency)\n",
+    "            dependencies_dict[\"dependent_item_url\"] = get_item_page_url(dependency.id)\n",
+    "            dependencies_dict[\"dependent_url\"] = get_item_url(dependency)\n",
     "\n",
     "            update_dependencies_dict[\"attributes\"] = dependencies_dict\n",
-    "\n",
     "            dependencies_list.append(update_dependencies_dict)\n",
     "\n",
     "    update_items_dict[\"attributes\"] = items_dict\n",
-    "\n",
     "    items_list.append(update_items_dict)\n",
     "\n",
-    "print(f\"Number of items to add to table: {len(items_list)}\")\n",
-    "print(f\"Number of items to add to table: {len(dependencies_list)}\")"
+    "print(f\"Number of items to add to items table: {len(items_list)}\")\n",
+    "print(f\"Number of items to add to dependencies table: {len(dependencies_list)}\")"
    ]
   },
   {
@@ -169,7 +144,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
    "id": "82549bee",
    "metadata": {},
    "outputs": [],
@@ -177,25 +152,12 @@
     "# This script will effectively overwrite the output of the last run, \n",
     "# so before writing any new records we simply truncate tables\n",
     "# NOTE: can't use truncate like for users table because of the relationship class!\n",
+    "# NOTE: Do we even need the relationship class? We're just shoving everything in a Dashboard/ExB anyway...?\n",
     "inventory_table.delete_features(where=\"1=1\")\n",
+    "items_update = inventory_table.edit_features(adds=items_list)\n",
     "\n",
-    "# Add users to table\n",
-    "items_update = inventory_table.edit_features(adds=items_list)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 21,
-   "id": "1692db1b",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# This script will effectively overwrite the output of the last run, \n",
-    "# so before writing any new records we simply truncate tables\n",
-    "# NOTE: can't use truncate like for users table because of the relationship class!\n",
+    "# Add items and dependencies to tables\n",
     "dependencies_table.delete_features(where=\"1=1\")\n",
-    "\n",
-    "# Add users to table\n",
     "dependencies_update = dependencies_table.edit_features(adds=dependencies_list)"
    ]
   }
